--- a/templates/about.html
+++ b/templates/about.html
@@ -9,7 +9,7 @@
     <section class="contact-area section-padding-100">
         <div class="container">
             <div class="row justify-content-center">
-                <!-- Contact Form Area -->
+                <!-- Contact Form Area 1-->
                 <div class="col-12 col-md-10 col-lg-8">
                     <div class="contact-form">
                         <h5>Get in Touch</h5>
